# Swarm-of-Swarms-Neural-OS

./: .env  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  CULTURAL_NEUTRALITY.md  DATABASE_MIGRATION_GUIDE.md  DOCKER_DEPLOYMENT.md  GLOBAL_DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  INSTALL.md  LEGAL_DISCLAIMERS.md  LICENSE.md  LOVABLE_PLATFORM_NOTICE.md  POLARDB_SETUP_GUIDE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TECHNOLOGY_DISCLAIMERS.md  build_real_modules.ps1  build_real_modules.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  kernel_module.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml  global-mirror.yml  release.yml
docs/architecture/: CognitiveCapabilities.md  CognitiveDomains.md  CognitiveSystemDiagram.md  EventSystem.md  FeatureArchitecture.md  Index.md  KernelSystem.md  LayeredDesign.md  SystemOverview.md
public/: index.html  wasm-service-worker.js
scripts/: check_node_wasm_compatibility.js  convert-all-hyphenated-to-underscored.ps1  pre-commit-validation.js
src/: .env.example  App.tsx  index.css  main.tsx
src/rust/reasoning_engine/: Cargo.toml  README.md  build.sh  build_for_real.ps1  build_for_real.sh
src/rust/reasoning_engine/src/: lib.rs  tinyllama_inference.rs
src/rust/reasoning_engine/src/bridges/: mod.rs  neural.rs  wasm.rs
src/rust/reasoning_engine/src/core/: ethical.rs  mod.rs  temporal.rs
(+485 files in other folders)
